--- a/GML/html/index.html
+++ b/GML/html/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="shortcut icon" href="../image/gml cup.png">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="shortcut icon" href="image/gml cup.png">
     <title>Geometry Major League</title>
 </head>
 <body>
     <div class="nav">
         <a href="#" title="Перейти на главную страницу"><div class="logo">
-            <img src="../image/gml cup.png" alt="#">
+            <img src="image/gml cup.png" alt="#">
             <p class="desktop">Geometry Major League</p>
             <p class="mobile">GML</p>
         </div></a>
@@ -22,7 +22,7 @@
             </ul>
         </nav>
         <nav class="mobile">
-            <button class="burger"><img src="../image/Burger.svg" alt="#"></button>
+            <button class="burger"><img src="image/Burger.svg" alt="#"></button>
             <ul>
                 <a href="#"><li>Главная</li></a>
                 <a href="##"><li>О турнире</li></a>
