--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div></a>
         <nav class="nav-desktop">
             <ul>
-                <a href="#" title="Перейти на главную страницу"><li>Главная</li></a>
+                <a href="/home" title="Перейти на главную страницу"><li>Главная</li></a>
                 <a href="##" title="Посмотреть информацию о турнире"><li>О турнире</li></a>
                 <a href="###" title="Посмотреть историю матчей и их итоги"><li>Матчи</li></a>
             </ul>
