--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div></a>
         <nav class="nav-desktop">
             <ul>
-                <a href="/home" title="Перейти на главную страницу"><li>Главная</li></a>
-                <a href="##" title="Посмотреть информацию о турнире"><li>О турнире</li></a>
-                <a href="###" title="Посмотреть историю матчей и их итоги"><li>Матчи</li></a>
+                <a href="/home" role="link" title="Перейти на главную страницу"><li>Главная</li></a>
+                <a href="/tournament" role="link" title="Посмотреть информацию о турнире"><li>О турнире</li></a>
+                <a href="/matches" role="link" title="Посмотреть историю матчей и их итоги"><li>Матчи</li></a>
             </ul>
         </nav>
         <nav class="nav-mobile">
