--- a/index.html
+++ b/index.html
@@ -56,5 +56,6 @@
         <div class="content-right-pan"></div>
     </div>
     <script src="./js/timer.js"></script>
+    <script src="./js/address bar.js"></script>
 </body>
 </html>
