--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
         </div></a>
         <nav class="nav-desktop">
             <ul>
-                <a href="/home" role="link" title="Перейти на главную страницу"><li>Главная</li></a>
-                <a href="/tournament" role="link" title="Посмотреть информацию о турнире"><li>О турнире</li></a>
-                <a href="/matches" role="link" title="Посмотреть историю матчей и их итоги"><li>Матчи</li></a>
+                <a id="home-page" href="#" title="Перейти на главную страницу"><li>Главная</li></a>
+                <a id="tournament-page" href="#" title="Посмотреть информацию о турнире"><li>О турнире</li></a>
+                <a id="matches-page" href="#" title="Посмотреть историю матчей и их итоги"><li>Матчи</li></a>
             </ul>
         </nav>
         <nav class="nav-mobile">
             <button class="burger"><img src="./image/Burger.svg" alt="#"></button>
             <ul>
-                <a href="#"><li>Главная</li></a>
-                <a href="##"><li>О турнире</li></a>
-                <a href="###"><li>Матчи</li></a>
+                <a id="home-page-m" href="#"><li>Главная</li></a>
+                <a id="tournament-page-m" href="#"><li>О турнире</li></a>
+                <a id="matches-page-m" href="#"><li>Матчи</li></a>
             </ul>
         </nav>
     </div>
@@ -35,7 +35,6 @@
         <div class="content-left-pan"></div>
         <div class="content-center">
             <div class="announcement">
-                <!-- <p id="timer">СЛЕДУЮЩИЙ МАТЧ ЧЕРЕЗ: 00:37:34</p> -->
                 <p id="timer"></p>
             </div>
             <div class="last-match">
