--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="nav">
-        <a href="#" title="Перейти на главную страницу"><div class="logo">
+        <a id='home-page-logo' href="#" title="Перейти на главную страницу"><div class="logo">
             <img src="./image/gml cup.png" alt="#">
             <p class="logo-desktop">Geometry Major League</p>
             <p class="logo-mobile">GML</p>
