--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/nav.css">
+    <link rel="stylesheet" href="./css/content.css">
     <link rel="shortcut icon" href="./image/gml cup.png">
     <title>Geometry Major League</title>
 </head>
 <body>
     <div class="nav">
-        <a id='home-page-logo' href="#" title="Перейти на главную страницу"><div class="logo">
+        <a id="home-page-logo" href="#" title="Перейти на главную страницу"><div class="logo">
             <img src="./image/gml cup.png" alt="#">
             <p class="logo-desktop">Geometry Major League</p>
             <p class="logo-mobile">GML</p>
@@ -32,7 +34,8 @@
     </div>
 
     <div class="content">
-        <div class="content-left-pan"></div>
+        <div class="content-left-pan">
+        </div>
         <div class="content-center">
             <div class="announcement">
                 <p id="timer"></p>
