--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
         </div></a>
         <nav class="nav-desktop">
             <ul>
-                <a id="home-page" href="#" title="Перейти на главную страницу"><li>Главная</li></a>
-                <a id="tournament-page" href="#" title="Посмотреть информацию о турнире"><li>О турнире</li></a>
-                <a id="matches-page" href="#" title="Посмотреть историю матчей и их итоги"><li>Матчи</li></a>
+                <a id="home-page" href="index.html" class="nav-links" title="Перейти на главную страницу"><li>Главная</li></a>
+                <a id="tournament-page" href="./html/tournament.html" class="nav-links" title="Посмотреть информацию о турнире"><li>О турнире</li></a>
+                <a id="matches-page" href="./html/matches.html" class="nav-links" title="Посмотреть историю матчей и их итоги"><li>Матчи</li></a>
             </ul>
         </nav>
         <nav class="nav-mobile">
             <button class="burger"><img src="./image/Burger.svg" alt="#"></button>
-            <ul>
-                <a id="home-page-m" href="#"><li>Главная</li></a>
-                <a id="tournament-page-m" href="#"><li>О турнире</li></a>
-                <a id="matches-page-m" href="#"><li>Матчи</li></a>
+            <ul class="not-active">
+                <a id="home-page-m" class="nav-links" href="#"><li>Главная</li></a>
+                <a id="tournament-page-m" class="nav-links" href="#"><li>О турнире</li></a>
+                <a id="matches-page-m" class="nav-links" href="#"><li>Матчи</li></a>
             </ul>
         </nav>
     </div>
@@ -59,5 +59,7 @@
     </div>
     <script src="./js/timer.js"></script>
     <script src="./js/address bar.js"></script>
+    <script src="./js/change page.js"></script>
+    <script src="./js/mobile nav.js"></script>
 </body>
 </html>
