modified:   index.html

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
         </div></a>
         <nav class="nav-desktop">
             <ul>
-                <a id="home-page" href="index.html" class="nav-links" title="Перейти на главную страницу"><li>Главная</li></a>
-                <a id="tournament-page" href="./html/tournament.html" class="nav-links" title="Посмотреть информацию о турнире"><li>О турнире</li></a>
-                <a id="matches-page" href="./html/matches.html" class="nav-links" title="Посмотреть историю матчей и их итоги"><li>Матчи</li></a>
+                <a id="home-page" href="/home" class="nav-links" title="Перейти на главную страницу"><li>Главная</li></a>
+                <a id="tournament-page" href="/tournament" class="nav-links" title="Посмотреть информацию о турнире"><li>О турнире</li></a>
+                <a id="matches-page" href="/matches" class="nav-links" title="Посмотреть историю матчей и их итоги"><li>Матчи</li></a>
             </ul>
         </nav>
         <nav class="nav-mobile">
             <button class="burger"><img src="./image/Burger.svg" alt="#"></button>
             <ul class="not-active">
-                <a id="home-page-m" class="nav-links" href="#"><li>Главная</li></a>
-                <a id="tournament-page-m" class="nav-links" href="#"><li>О турнире</li></a>
-                <a id="matches-page-m" class="nav-links" href="#"><li>Матчи</li></a>
+                <a id="home-page-m" class="nav-links" href="/home"><li>Главная</li></a>
+                <a id="tournament-page-m" class="nav-links" href="/tournament"><li>О турнире</li></a>
+                <a id="matches-page-m" class="nav-links" href="/matches"><li>Матчи</li></a>
             </ul>
         </nav>
     </div>
@@ -58,8 +58,8 @@
         <div class="content-right-pan"></div>
     </div>
     <script src="./js/timer.js"></script>
-    <script src="./js/address bar.js"></script>
-    <script src="./js/change page.js"></script>
+    <!-- <script src="./js/address bar.js"></script> -->
+    <!-- <script src="./js/change page.js"></script> -->
     <script src="./js/mobile nav.js"></script>
 </body>
 </html>
