--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <div class="content-right-pan"></div>
     </div>
     <script src="./js/timer.js"></script>
-    <!-- <script src="./js/address bar.js"></script> -->
-    <!-- <script src="./js/change page.js"></script> -->
+    <script src="./js/address bar.js"></script>
+    <script src="./js/change page.js"></script>
     <script src="./js/mobile nav.js"></script>
 </body>
 </html>
