modified:   index.html 	modified:   nav.css 	modified:   change page.js

--- a/index.html
+++ b/index.html
@@ -1,65 +1,65 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/nav.css">
-    <link rel="stylesheet" href="./css/content.css">
-    <link rel="shortcut icon" href="./image/gml cup.png">
-    <title>Geometry Major League</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/nav.css">
+  <link rel="stylesheet" href="./css/content.css">
+  <link rel="shortcut icon" href="./image/gml cup.png">
+  <title>Geometry Major League</title>
 </head>
 <body>
-    <div class="nav">
-        <a id="home-page-logo" href="#" title="Перейти на главную страницу"><div class="logo">
-            <img src="./image/gml cup.png" alt="#">
-            <p class="logo-desktop">Geometry Major League</p>
-            <p class="logo-mobile">GML</p>
-        </div></a>
-        <nav class="nav-desktop">
-            <ul>
-                <a id="home-page" href="/home" class="nav-links" title="Перейти на главную страницу"><li>Главная</li></a>
-                <a id="tournament-page" href="/tournament" class="nav-links" title="Посмотреть информацию о турнире"><li>О турнире</li></a>
-                <a id="matches-page" href="/matches" class="nav-links" title="Посмотреть историю матчей и их итоги"><li>Матчи</li></a>
-            </ul>
-        </nav>
-        <nav class="nav-mobile">
-            <button class="burger"><img src="./image/Burger.svg" alt="#"></button>
-            <ul class="not-active">
-                <a id="home-page-m" class="nav-links" href="/home"><li>Главная</li></a>
-                <a id="tournament-page-m" class="nav-links" href="/tournament"><li>О турнире</li></a>
-                <a id="matches-page-m" class="nav-links" href="/matches"><li>Матчи</li></a>
-            </ul>
-        </nav>
-    </div>
+  <div class="nav">
+    <a id="home-page-logo" href="#" title="Перейти на главную страницу"><div class="logo">
+      <img src="./image/gml cup.png" alt="#">
+      <p class="logo-desktop">Geometry Major League</p>
+      <p class="logo-mobile">GML</p>
+    </div></a>
+    <nav class="nav-desktop">
+      <ul>
+        <li><a id="home-page" href="/home" class="nav-links" title="Перейти на главную страницу">Главная</a></li>
+        <li><a id="tournament-page" href="/tournament" class="nav-links" title="Посмотреть информацию о турнире">О турнире</a></li>
+        <li><a id="matches-page" href="/matches" class="nav-links" title="Посмотреть историю матчей и их итоги">Матчи</a></li>
+      </ul>
+    </nav>
+    <nav class="nav-mobile">
+      <button class="burger"><img src="./image/Burger.svg" alt="#"></button>
+      <ul class="not-active">
+        <li><a id="home-page-m" class="nav-links" href="/home">Главная</a></li>
+        <li><a id="tournament-page-m" class="nav-links" href="/tournament">О турнире</a></li>
+        <li><a id="matches-page-m" class="nav-links" href="/matches">Матчи</a></li>
+      </ul>
+    </nav>
+  </div>
 
-    <div class="content">
-        <div class="content-left-pan">
-        </div>
-        <div class="content-center">
-            <div class="announcement">
-                <p id="timer"></p>
-            </div>
-            <div class="last-match">
-                <p>НАШ ПОСЛЕДНИЙ МАТЧ:</p>
-                <iframe
-                width="480"
-                height="270"
-                src="https://www.youtube-nocookie.com/embed/tVvrb3d9HgY?si=jQ_5f_452YDE-AC6"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin"
-                allowfullscreen>
-                </iframe>
-                <a href="https://www.youtube.com/watch?v=tVvrb3d9HgY" target="_blank"><img src="https://i.ytimg.com/vi/tVvrb3d9HgY/hqdefault.jpg?sqp=-oaymwEnCNACELwBSFryq4qpAxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&rs=AOn4CLCRsUfVGVJkoRRzhY2nFx1ETFu4CQ" alt=""></a>
-            </div>
-        </div>
-        <div class="content-right-pan"></div>
+  <div class="content">
+    <div class="content-left-pan">
     </div>
-    <script src="./js/timer.js"></script>
-    <script src="./js/address bar.js"></script>
-    <script src="./js/change page.js"></script>
-    <script src="./js/mobile nav.js"></script>
+    <div class="content-center">
+      <div class="announcement">
+        <p id="timer"></p>
+      </div>
+      <div class="last-match">
+        <p>НАШ ПОСЛЕДНИЙ МАТЧ:</p>
+        <iframe
+        width="480"
+        height="270"
+        src="https://www.youtube-nocookie.com/embed/tVvrb3d9HgY?si=jQ_5f_452YDE-AC6"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen>
+        </iframe>
+        <a href="https://www.youtube.com/watch?v=tVvrb3d9HgY" target="_blank"><img src="https://i.ytimg.com/vi/tVvrb3d9HgY/hqdefault.jpg?sqp=-oaymwEnCNACELwBSFryq4qpAxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&rs=AOn4CLCRsUfVGVJkoRRzhY2nFx1ETFu4CQ" alt=""></a>
+      </div>
+    </div>
+    <div class="content-right-pan"></div>
+  </div>
+  <script src="./js/timer.js"></script>
+  <script src="./js/address bar.js"></script>
+  <script src="./js/change page.js"></script>
+  <script src="./js/mobile nav.js"></script>
 </body>
 </html>
