--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
         referrerpolicy="strict-origin-when-cross-origin"
         allowfullscreen>
         </iframe>
-        <a href="https://www.youtube.com/watch?v=tVvrb3d9HgY" target="_blank"><img src="https://i.ytimg.com/vi/tVvrb3d9HgY/hqdefault.jpg?sqp=-oaymwEnCNACELwBSFryq4qpAxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&rs=AOn4CLCRsUfVGVJkoRRzhY2nFx1ETFu4CQ" alt=""></a>
+        <a href="https://www.youtube.com/watch?v=tVvrb3d9HgY"
+           target="_blank">
+          <img src="https://i.ytimg.com/vi/tVvrb3d9HgY/hqdefault.jpg?sqp=-oaymwEnCNACELwBSFryq4qpAxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&rs=AOn4CLCRsUfVGVJkoRRzhY2nFx1ETFu4CQ"
+               alt="">
+        </a>
       </div>
     </div>
     <div class="content-right-pan"></div>
