--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
       <ul>
         <li>
           <a id="home-page"
-             href="/home"
+             href="/"
              class="nav-links"
              title="Перейти на главную страницу">Главная</a>
         </li>
         <li>
           <a id="tournament-page"
-             href="/tournament"
+             href="/"
              class="nav-links"
              title="Посмотреть информацию о турнире">О турнире</a>
         </li>
         <li>
           <a id="matches-page"
-             href="/matches"
+             href="/"
              class="nav-links"
              title="Посмотреть историю матчей и их итоги">Матчи</a>
         </li>
@@ -47,17 +47,17 @@
       <ul class="not-active">
         <li>
           <a id="home-page-m"
-             href="/home"
+             href="/"
              class="nav-links">Главная</a>
         </li>
         <li>
           <a id="tournament-page-m"
-             href="/tournament"
+             href="/"
              class="nav-links">О турнире</a>
         </li>
         <li>
           <a id="matches-page-m"
-             href="/matches"
+             href="/"
              class="nav-links">Матчи</a>
         </li>
       </ul>
@@ -93,7 +93,7 @@
   </div>
 
   <script src="./js/timer.js"></script>
-  <script src="./js/address bar.js"></script>
+<!--  <script src="./js/address bar.js"></script>-->
   <script src="./js/change page.js"></script>
   <script src="./js/mobile nav.js"></script>
 
