modified:   css/content.css 	modified:   css/nav.css 	deleted:    css/styles.scss 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,27 @@
     </nav>
   </header>
 
-<!--  <script src="./js/timer.js"></script>-->
+  <main class="content">
+    <div class="content__panel-left"></div>
+    <div class="content__panel-center">
+      <header class="panel-center__announcement-block flex">
+        <p id="timer" class="announcement-text"></p>
+      </header>
+      <section class="panel-center__last-match">
+        <h2>Наш последний матч:</h2>
+        <iframe width="448"
+        height="252"
+        src="https://www.youtube.com/embed/49gQPv4xLak?si=Rz4Hws82XLI1xEYC"
+        title="YouTube video player"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen></iframe>
+      </section>
+    </div>
+    <div class="content__panel-right"></div>
+  </main>
+
+ <script src="./js/timer.js"></script>
 <!--  <script src="./js/address bar.js"></script>-->
   <script src="./js/change page.js"></script>
   <script src="./js/mobile nav.js"></script>
