modified:   css/content.css modified:   css/nav.css modified:   index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <main class="content">
     <div class="content__panel-left"></div>
-    <div class="content__panel-center">
+    <div class="content__panel-center transparent">
       <header class="panel-center__announcement-block flex">
         <p id="timer" class="announcement-text"></p>
       </header>
